fix: fix menu items overflowing on certain screen sizes

--- a/src/app.scss
+++ b/src/app.scss
@@ -57,7 +57,7 @@ body {
   position: relative;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 2.1vh;
+  font-size: 3vw;
 }
 
 .open-menu , .close-menu {
